Active Record and the Repository Pattern: Fix issue z-index of presenter notes
Lower left portion of links in the notes weren't clickable, due to
(the non-visible portions of) the main window overlapping the notes.

--- a/ActiveRecord_and_Repository_Pattern/slideshow.css
+++ b/ActiveRecord_and_Repository_Pattern/slideshow.css
@@ -6,7 +6,7 @@ html .remark-container.remark-presenter-mode .remark-slides-area {
 }
 .remark-presenter-mode .remark-notes-area {
   left: 50%;
-  z-index: 1;
+  z-index: 10;
   font-size: 150%;
   line-height: 1.4;
 }
